syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";

message UpdateUserRequest {
  string user_id = 1;
  string password = 2;
}

message UpdateUserResponse {
  string message = 1;
}